# cobra-algo

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/cobra_algo/: __init__.py  _utils.py  exceptions.py
src/cobra_algo/text/: __init__.py  _tf_idf.py
src/repo_name/: __init__.py
tests/: test_tf_idf.py
