[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobra-algo"
dynamic = ["version"]
description = "XXX"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    {name = "Zhen Tian", email = "zhen.tian.cs@gmail.com"}
]
requires-python = ""
dependencies = [

]

[project.urls]
Homepage = "https://github.com/user_name/cobra-algo.git"
Repository = "https://github.com/user_name/cobra-algo.git"
Issues = "https://github.com/user_name/cobra-algo.git/issues"

[tool.setuptools.dynamic]
version = {attr = "cobra_algo.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cobra_algo*"]

[tool.setuptools.package-data]
cobra_algo = [
    "draw/fonts/*.ttf",
    "draw/fonts/*.TTF"
]
