[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobra-algo"
dynamic = ["version"]
description = "A lightweight and extensible Python library for algorithm implementations in data processing and machine learning."
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    {name = "Zhen Tian", email = "zhen.tian.cs@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.21,<2.0",
]

[project.optional-dependencies]
torch = ["torch>=1.11.0,<2.0"]
sklearn = ["scikit-learn>=1.1,<2.0"]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/tinchen777/cobra-algo.git"
Repository = "https://github.com/tinchen777/cobra-algo.git"
Issues = "https://github.com/tinchen777/cobra-algo.git/issues"

[tool.setuptools.dynamic]
version = {attr = "cobra_algo.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cobra_algo*"]
