[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobra-algo"
dynamic = ["version"]
description = "A lightweight library of machine learning and data processing algorithms, built for practical use and easy integration."
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    {name = "Zhen Tian", email = "zhen.tian.cs@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
    "cobra-array>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "numpy>=1.21,<2.0",
    "scikit-learn>=1.1,<2.0",
]

[project.urls]
Homepage = "https://github.com/tinchen777/cobra-algo.git"
Repository = "https://github.com/tinchen777/cobra-algo.git"
Issues = "https://github.com/tinchen777/cobra-algo.git/issues"

[tool.setuptools.dynamic]
version = {attr = "cobra_algo.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cobra_algo*"]
